// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component have to match default button snapshot 1`] = `
<Button
  attributes="attributes"
  class="class"
  className="className"
  custom_element={Object {}}
  custom_method={[Function]}
  disabled="disabled"
  href={null}
  icon="question"
  icon_position="right"
  icon_size="icon_size"
  id="id"
  innerRef={Object {}}
  on_click="on_click"
  size={null}
  text="text"
  title="This is a button title"
  type="type"
  variant="primary"
>
  <button
    className="dnb-button dnb-button--primary dnb-button--icon-position-right dnb-button--has-text dnb-button--has-icon id class className"
    disabled="disabled"
    id="id"
    onClick={[Function]}
    onMouseOut={[Function]}
    title="This is a button title"
    type="type"
  >
    <Content
      attributes="attributes"
      class="class"
      className="className"
      content="children"
      custom_element={Object {}}
      custom_method={[Function]}
      disabled="disabled"
      href={null}
      icon="question"
      icon_position="right"
      icon_size="icon_size"
      id="id"
      innerRef={Object {}}
      isIconOnly={false}
      on_click="on_click"
      size={null}
      text="text"
      title="This is a button title"
      type="type"
      variant="primary"
    >
      children
      <span
        className="dnb-button__text"
        key="button-text"
      >
        text
      </span>
      <IconPrimary
        alt="This is a button title"
        aria-hidden={true}
        attributes={null}
        class={null}
        className="dnb-button__icon"
        color={null}
        height={null}
        icon="question"
        key="button-icon"
        modifier={null}
        size="icon_size"
        title={null}
        width={null}
      >
        <span
          alt="This is a button title"
          aria-hidden={true}
          aria-label="This is a button title"
          className="dnb-icon dnb-button__icon"
          role="img"
        >
          <question>
            <svg
              fill="none"
              viewBox="0 0 16 16"
            >
              <path
                clipRule="evenodd"
                d="M4.352 5.1c0-2.05 1.55-3.6 3.6-3.6 2.052 0 3.601 1.55 3.601 3.6 0 2.051-1.55 3.6-3.6 3.6a.75.75 0 0 0-.75.75v2.666a.75.75 0 0 0 1.5 0V10.15c2.506-.348 4.35-2.425 4.35-5.049 0-2.879-2.22-5.1-5.1-5.1-2.88 0-5.1 2.221-5.1 5.1a.75.75 0 0 0 1.5 0zm3.6 10.898c.659 0 1.097-.439 1.097-1.097 0-.658-.438-1.096-1.096-1.096-.658 0-1.097.438-1.097 1.096 0 .658.439 1.097 1.097 1.097z"
                fill="#000"
                fillRule="evenodd"
              />
            </svg>
          </question>
        </span>
      </IconPrimary>
    </Content>
  </button>
</Button>
`;

exports[`Button component have to match href="..." snapshot 1`] = `
<Button
  attributes="attributes"
  class="class"
  className="className"
  custom_element={Object {}}
  custom_method={[Function]}
  disabled="disabled"
  href="https://url"
  icon="question"
  icon_position="right"
  icon_size="icon_size"
  id="id"
  innerRef={Object {}}
  on_click="on_click"
  size={null}
  text="text"
  title="This is a button title"
  type="type"
  variant="primary"
>
  <a
    className="dnb-button dnb-button--primary dnb-button--icon-position-right dnb-button--has-text dnb-button--has-icon id class className dnb-no-anchor-underline dnb-no-anchor-hover"
    disabled="disabled"
    href="https://url"
    id="id"
    onClick={[Function]}
    onMouseOut={[Function]}
    title="This is a button title"
    type="type"
  >
    <Content
      attributes="attributes"
      class="class"
      className="className"
      content="children"
      custom_element={Object {}}
      custom_method={[Function]}
      disabled="disabled"
      href="https://url"
      icon="question"
      icon_position="right"
      icon_size="icon_size"
      id="id"
      innerRef={Object {}}
      isIconOnly={false}
      on_click="on_click"
      size={null}
      text="text"
      title="This is a button title"
      type="type"
      variant="primary"
    >
      children
      <span
        className="dnb-button__text"
        key="button-text"
      >
        text
      </span>
      <IconPrimary
        alt="This is a button title"
        aria-hidden={true}
        attributes={null}
        class={null}
        className="dnb-button__icon"
        color={null}
        height={null}
        icon="question"
        key="button-icon"
        modifier={null}
        size="icon_size"
        title={null}
        width={null}
      >
        <span
          alt="This is a button title"
          aria-hidden={true}
          aria-label="This is a button title"
          className="dnb-icon dnb-button__icon"
          role="img"
        >
          <question>
            <svg
              fill="none"
              viewBox="0 0 16 16"
            >
              <path
                clipRule="evenodd"
                d="M4.352 5.1c0-2.05 1.55-3.6 3.6-3.6 2.052 0 3.601 1.55 3.601 3.6 0 2.051-1.55 3.6-3.6 3.6a.75.75 0 0 0-.75.75v2.666a.75.75 0 0 0 1.5 0V10.15c2.506-.348 4.35-2.425 4.35-5.049 0-2.879-2.22-5.1-5.1-5.1-2.88 0-5.1 2.221-5.1 5.1a.75.75 0 0 0 1.5 0zm3.6 10.898c.659 0 1.097-.439 1.097-1.097 0-.658-.438-1.096-1.096-1.096-.658 0-1.097.438-1.097 1.096 0 .658.439 1.097 1.097 1.097z"
                fill="#000"
                fillRule="evenodd"
              />
            </svg>
          </question>
        </span>
      </IconPrimary>
    </Content>
  </a>
</Button>
`;

exports[`Button scss have to match default theme snapshot 1`] = `
"/*
* Button theme
*
*/
/**
 * This file is only used to make themes independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
 * Typography
 *
 * The font-family properties are defined in the properties.scss file, like:
 * --font-family-default:
 *
 */
.dnb-typo-std,
.dnb-typo-book {
  font-family: var(--font-family-default);
  font-weight: normal;
  font-style: normal; }

.dnb-typo-medium {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-medium);
  font-style: normal; }

.dnb-typo-demi {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-demi);
  font-style: normal; }

.dnb-typo-number--lining {
  font-variant-numeric: lining-nums;
  font-feature-settings: \\"lnum\\"; }

.dnb-typo-number--tabular {
  font-variant-numeric: tabular-nums;
  font-feature-settings: \\"lnum\\"; }

.dnb-typo-number--oldstyle {
  font-variant-numeric: oldstyle-nums;
  font-feature-settings: \\"onum\\"; }

.dnb-typo-number--proportional {
  font-variant-numeric: proportional-nums;
  font-feature-settings: \\"pnum\\"; }

@font-face {
  font-family: 'Fedra Sans Std';
  src: url(\\"../../../../../assets/fonts//FedraSansStd-Book.eot\\");
  src: url(\\"../../../../../assets/fonts//FedraSansStd-Book.eot?#iefix\\") format(\\"embedded-opentype\\"), url(\\"../../../../../assets/fonts//FedraSansStd-Book.woff2\\") format(\\"woff2\\"), url(\\"../../../../../assets/fonts//FedraSansStd-Book.woff\\") format(\\"woff\\"), url(\\"../../../../../assets/fonts//FedraSansStd-Book.ttf\\") format(\\"truetype\\");
  font-weight: normal;
  font-style: normal;
  font-display: fallback; }

@font-face {
  font-family: 'Fedra Sans Std';
  src: url(\\"../../../../../assets/fonts//FedraSansStd-Demi.eot\\");
  src: url(\\"../../../../../assets/fonts//FedraSansStd-Demi.eot?#iefix\\") format(\\"embedded-opentype\\"), url(\\"../../../../../assets/fonts//FedraSansStd-Demi.woff2\\") format(\\"woff2\\"), url(\\"../../../../../assets/fonts//FedraSansStd-Demi.woff\\") format(\\"woff\\"), url(\\"../../../../../assets/fonts//FedraSansStd-Demi.ttf\\") format(\\"truetype\\");
  font-weight: 500;
  font-style: normal;
  font-display: fallback; }

@font-face {
  font-family: 'Fedra Sans Std';
  src: url(\\"../../../../../assets/fonts//FedraSansStd-Medium.eot\\");
  src: url(\\"../../../../../assets/fonts//FedraSansStd-Medium.eot?#iefix\\") format(\\"embedded-opentype\\"), url(\\"../../../../../assets/fonts//FedraSansStd-Medium.woff2\\") format(\\"woff2\\"), url(\\"../../../../../assets/fonts//FedraSansStd-Medium.woff\\") format(\\"woff\\"), url(\\"../../../../../assets/fonts//FedraSansStd-Medium.ttf\\") format(\\"truetype\\");
  font-weight: 600;
  font-style: normal;
  font-display: fallback; }

/*
* Button mixins
*
*/
.dnb-button--secondary:not([disabled]):not(.dnb-button--has-text) .dnb-button__icon {
  color: var(--color-emerald-green); }

.dnb-button--primary {
  color: var(--color-white);
  background-color: var(--color-sea-green-alt);
  border-color: transparent; }
  .no-touch .dnb-button--primary:hover[disabled] {
    cursor: not-allowed; }
  .no-touch .dnb-button--primary:hover:not([disabled]) {
    color: var(--color-sea-green);
    background-color: var(--color-mint-green-50);
    border-color: var(--color-mint-green-50);
    box-shadow: 0 0 0 var(--button-border-width--hover) var(--color-mint-green-50); }
    .no-touch .dnb-button--primary:hover:not([disabled]):not([disabled]):active {
      box-shadow: 0 0 0 2px transparent;
      border-color: transparent; }
  .dnb-button--primary:not([disabled]):focus {
    color: var(--color-sea-green);
    background-color: var(--color-mint-green-50);
    border-color: var(--color-mint-green-50);
    outline: none; }
    html[data-whatinput='keyboard'] .dnb-button--primary:not([disabled]):focus {
      box-shadow: 0 0 0 2px var(--color-emerald-green);
      border-color: transparent; }
  .dnb-button--primary[disabled] {
    color: var(--color-white);
    background-color: var(--color-sea-green-alt-30); }

.dnb-button--secondary {
  color: var(--color-sea-green);
  background-color: var(--color-white);
  border-color: var(--color-sea-green-alt); }
  .no-touch .dnb-button--secondary:hover[disabled] {
    cursor: not-allowed; }
  .no-touch .dnb-button--secondary:hover:not([disabled]) {
    color: var(--color-sea-green);
    background-color: var(--color-mint-green-50);
    border-color: var(--color-mint-green-50);
    box-shadow: 0 0 0 var(--button-border-width--hover) var(--color-mint-green-50); }
    .no-touch .dnb-button--secondary:hover:not([disabled]):not([disabled]):active {
      box-shadow: 0 0 0 2px transparent;
      border-color: transparent; }
  .dnb-button--secondary:not([disabled]):focus {
    color: var(--color-sea-green);
    background-color: var(--color-mint-green-50);
    border-color: var(--color-mint-green-50);
    outline: none; }
    html[data-whatinput='keyboard'] .dnb-button--secondary:not([disabled]):focus {
      box-shadow: 0 0 0 2px var(--color-emerald-green);
      border-color: transparent; }
  .dnb-button--secondary[disabled] {
    color: var(--color-sea-green-alt-30);
    background-color: var(--color-white);
    border-color: var(--color-sea-green-alt-30); }

.dnb-button--tertiary {
  position: relative;
  z-index: 1;
  color: var(--color-sea-green);
  background-color: transparent;
  border-color: transparent; }
  .dnb-button--tertiary.dnb-button--has-text {
    padding-left: 0.5rem;
    padding-right: 0.5rem; }
    .dnb-button--tertiary.dnb-button--has-text:not([disabled]) .dnb-button__icon {
      margin: 0 0.5rem; }
    .dnb-button--tertiary.dnb-button--has-text.dnb-button--icon-position-left .dnb-button__icon {
      margin-left: 0; }
    .dnb-button--tertiary.dnb-button--has-text.dnb-button--icon-position-right .dnb-button__icon {
      margin-right: 0; }
  .dnb-button--tertiary.dnb-button--has-text:not([disabled]):hover::after {
    content: '';
    position: absolute;
    z-index: -1;
    left: 0.1rem;
    right: 0.1rem;
    width: auto;
    height: 100%;
    left: 0.05rem;
    right: 0.05rem;
    bottom: 0;
    height: 1px;
    border-radius: 0.5px;
    border-bottom: 1px solid var(--color-sea-green);
    left: 0.45rem;
    right: 0.45rem;
    bottom: 0.5rem; }
  .dnb-button--tertiary.dnb-button--has-text:not([disabled]):hover.dnb-button--icon-position-left::after {
    left: 0.7rem; }
  .dnb-button--tertiary.dnb-button--has-text:not([disabled]):hover.dnb-button--icon-position-right::after {
    right: 0.7rem; }
  .dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text):hover .dnb-button__icon {
    color: var(--color-sea-green-alt-30); }
  .dnb-button--tertiary:not([disabled]):active::after,
  html[data-whatinput='keyboard'] .dnb-button--tertiary:not([disabled]):focus::after {
    border-bottom: none; }
  .dnb-button--tertiary:not([disabled]):focus {
    color: var(--color-sea-green);
    background-color: transparent;
    border-color: transparent;
    outline: none; }
    html[data-whatinput='keyboard'] .dnb-button--tertiary:not([disabled]):focus {
      box-shadow: 0 0 0 2px var(--color-emerald-green);
      border-color: transparent; }
  .dnb-button--tertiary[disabled] {
    color: var(--color-sea-green-alt-30); }

.dnb-button--signal {
  color: var(--color-black);
  background-color: var(--color-signal-yellow); }
  .no-touch .dnb-button--signal:hover[disabled] {
    cursor: not-allowed; }
  .no-touch .dnb-button--signal:hover:not([disabled]) {
    box-shadow: 0 0 0 var(--button-border-width--hover) var(--color-signal-yellow), 0 0 0 calc(var(--button-border-width--hover) + 1px) var(--color-black); }
    .no-touch .dnb-button--signal:hover:not([disabled]):not([disabled]):active {
      box-shadow: 0 0 0 2px transparent;
      border-color: transparent; }
  .dnb-button--signal:not([disabled]):focus {
    color: var(--color-black);
    background-color: var(--color-signal-yellow);
    border-color: var(--color-signal-yellow);
    outline: none; }
    html[data-whatinput='keyboard'] .dnb-button--signal:not([disabled]):focus {
      box-shadow: 0 0 0 2px var(--color-emerald-green);
      border-color: transparent; }
  .dnb-button--signal[disabled] {
    color: #b0b0b0;
    background-color: var(--color-signal-yellow-30); }
"
`;

exports[`Button scss have to match snapshot 1`] = `
"/*
* DNB Button
*
*/
/**
 * This file is only used to make components independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
 * CSS Properties
 *
 */
:root {
  --font-family-default: 'Fedra Sans Std', sans-serif;
  --font-family-book: 'Fedra Sans Std', sans-serif;
  /* Do not use, use --font-weight-... */
  --font-family-demi: 'Fedra Sans Std', sans-serif;
  /* Do not use, use --font-weight-... */
  --font-family-medium: 'Fedra Sans Std', sans-serif;
  /* Do not use, use --font-weight-... */
  --font-weight-default: normal;
  --font-weight-book: normal;
  --font-weight-demi: 500;
  --font-weight-medium: 600;
  --font-size-small: 0.875rem;
  --font-size-default: 1rem;
  --font-size-x-default: 1.25rem;
  --font-size-medium: 1.5rem;
  --font-size-large: 2rem;
  --font-size-xx-large: 3rem;
  --color-sea-green-alt: #008484;
  --color-mint-green-50: #d2f0e9;
  --color-mint-green-25: #e9f8f4;
  --color-mint-green-12: #f4fbf9;
  --color-sea-green-alt-30: #b3dada;
  --color-signal-yellow-30: #ffffd7;
  --color-cherry-red: #e10076;
  --color-cherry-red-80: #fdebf4;
  --color-black: #000;
  --color-black-80: #333;
  --color-black-30: #b3b3b3;
  --color-white: #fff;
  --color-black-border: #cdcdcd;
  --color-black-background: #fafafa;
  --color-sea-green: #007272;
  --color-mint-green: #a5e1d2;
  --color-summer-green: #28b482;
  --color-emerald-green: #14555a;
  --color-ocean-green: #00343e;
  --color-signal-orange: #ff5400;
  --color-signal-yellow: #ffff7a;
  --color-indigo: #23195a;
  --color-violet: #6e2382;
  --color-sky-blue: #4bbed2; }

/*
 * Typography
 *
 * The font-family properties are defined in the properties.scss file, like:
 * --font-family-default:
 *
 */
.dnb-typo-std,
.dnb-typo-book {
  font-family: var(--font-family-default);
  font-weight: normal;
  font-style: normal; }

.dnb-typo-medium {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-medium);
  font-style: normal; }

.dnb-typo-demi {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-demi);
  font-style: normal; }

.dnb-typo-number--lining {
  font-variant-numeric: lining-nums;
  font-feature-settings: \\"lnum\\"; }

.dnb-typo-number--tabular {
  font-variant-numeric: tabular-nums;
  font-feature-settings: \\"lnum\\"; }

.dnb-typo-number--oldstyle {
  font-variant-numeric: oldstyle-nums;
  font-feature-settings: \\"onum\\"; }

.dnb-typo-number--proportional {
  font-variant-numeric: proportional-nums;
  font-feature-settings: \\"pnum\\"; }

@font-face {
  font-family: 'Fedra Sans Std';
  src: url(\\"../../../../assets/fonts//FedraSansStd-Book.eot\\");
  src: url(\\"../../../../assets/fonts//FedraSansStd-Book.eot?#iefix\\") format(\\"embedded-opentype\\"), url(\\"../../../../assets/fonts//FedraSansStd-Book.woff2\\") format(\\"woff2\\"), url(\\"../../../../assets/fonts//FedraSansStd-Book.woff\\") format(\\"woff\\"), url(\\"../../../../assets/fonts//FedraSansStd-Book.ttf\\") format(\\"truetype\\");
  font-weight: normal;
  font-style: normal;
  font-display: fallback; }

@font-face {
  font-family: 'Fedra Sans Std';
  src: url(\\"../../../../assets/fonts//FedraSansStd-Demi.eot\\");
  src: url(\\"../../../../assets/fonts//FedraSansStd-Demi.eot?#iefix\\") format(\\"embedded-opentype\\"), url(\\"../../../../assets/fonts//FedraSansStd-Demi.woff2\\") format(\\"woff2\\"), url(\\"../../../../assets/fonts//FedraSansStd-Demi.woff\\") format(\\"woff\\"), url(\\"../../../../assets/fonts//FedraSansStd-Demi.ttf\\") format(\\"truetype\\");
  font-weight: 500;
  font-style: normal;
  font-display: fallback; }

@font-face {
  font-family: 'Fedra Sans Std';
  src: url(\\"../../../../assets/fonts//FedraSansStd-Medium.eot\\");
  src: url(\\"../../../../assets/fonts//FedraSansStd-Medium.eot?#iefix\\") format(\\"embedded-opentype\\"), url(\\"../../../../assets/fonts//FedraSansStd-Medium.woff2\\") format(\\"woff2\\"), url(\\"../../../../assets/fonts//FedraSansStd-Medium.woff\\") format(\\"woff\\"), url(\\"../../../../assets/fonts//FedraSansStd-Medium.ttf\\") format(\\"truetype\\");
  font-weight: 600;
  font-style: normal;
  font-display: fallback; }

/*
 * Scopes
 *
 */
/*
* DNB icon
*
*/
/*
* Icon component
*
*/
.dnb-icon {
  display: inline;
  vertical-align: baseline;
  font-size: inherit;
  line-height: 0;
  width: 1em;
  height: 1em; }
  .dnb-icon svg:not([fill]),
  .dnb-icon svg [fill] {
    fill: currentColor; }
  .dnb-icon svg [stroke] {
    stroke: currentColor; }
  .dnb-icon--small {
    width: 0.75rem;
    height: 0.75rem; }
  .dnb-icon--default {
    width: 1rem;
    height: 1rem; }
  .dnb-icon--medium {
    width: 1.5rem;
    height: 1.5rem; }
  .dnb-icon--large {
    width: 2rem;
    height: 2rem; }
  .dnb-icon--custom-size {
    width: auto;
    height: auto; }
  .dnb-icon svg:not([width]):not([height]),
  .dnb-icon img:not([width]):not([height]) {
    width: inherit;
    height: inherit; }
  .dnb-icon svg[width='100%'] {
    width: inherit; }
  .dnb-icon svg[height='100%'] {
    height: inherit; }

.dnb-button {
  font-family: sans-serif;
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-default);
  font-size: 1rem;
  font-style: normal;
  line-height: 1.5rem;
  color: var(--color-black-80, #333);
  font-variant-numeric: lining-nums;
  font-feature-settings: \\"lnum\\";
  font-size: 1em;
  line-height: 1.5em; }
  .dnb-button *,
  .dnb-button ::before,
  .dnb-button ::after {
    background-repeat: no-repeat;
    box-sizing: border-box; }
  .dnb-button ::before,
  .dnb-button ::after {
    text-decoration: inherit;
    vertical-align: inherit; }

/*
* Button component
*
*/
:root {
  --button-font-size: var(--font-size-default);
  --button-font-size-small: var(--font-size-small);
  --button-width: 2.5rem;
  --button-height: 2.5rem;
  --button-width--small: 1.5rem;
  --button-height--small: 1.5rem;
  --button-width--medium: 2rem;
  --button-height--medium: 2rem;
  --button-width--large: 3rem;
  --button-height--large: 3rem;
  --button-icon-size: 1rem;
  --button-border-width: 1px;
  --button-border-width--hover: 3px;
  --button-border-radius: calc(var(--button-height) / 2);
  --button-border-radius--small: calc(var(--button-height--small) / 2);
  --button-border-radius--medium: calc(var(--button-height--medium) / 2);
  --button-border-radius--large: calc(var(--button-height--large) / 2); }

.dnb-button {
  display: inline-flex;
  vertical-align: middle;
  align-content: center;
  align-items: center;
  justify-content: center;
  white-space: nowrap;
  cursor: pointer;
  width: var(--button-width);
  height: var(--button-height);
  padding: 0;
  border: var(--button-border-width) solid transparent;
  border-radius: var(--button-border-radius);
  font-size: var(--button-font-size);
  line-height: var(--button-height);
  text-decoration: none;
  /* Firefox includes a hidden border which messes up button dimensions */ }
  .dnb-button__icon {
    line-height: 0; }
    .dnb-button__icon:not(.dnb-icon) svg:not([width]):not([height]) {
      width: var(--button-icon-size);
      height: var(--button-icon-size); }
  .dnb-button__text {
    color: inherit;
    transform: translateY(var(--button-border-width)); }
  .dnb-button--size-small {
    width: var(--button-width--small);
    height: var(--button-height--small);
    font-size: var(--button-font-size-small);
    line-height: var(--button-font-size-small);
    border-radius: var(--button-border-radius--small); }
  .dnb-button--has-text.dnb-button--size-small {
    padding-left: 1rem;
    padding-right: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-small {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-small {
    padding-right: 0.5rem; }
  .dnb-button--size-medium {
    width: var(--button-width--medium);
    height: var(--button-height--medium);
    line-height: var(--button-height--medium);
    border-radius: var(--button-border-radius--medium); }
  .dnb-button--has-text.dnb-button--size-medium {
    padding-left: 1rem;
    padding-right: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-medium {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-medium {
    padding-right: 0.5rem; }
  .dnb-button--size-large {
    width: var(--button-width--large);
    height: var(--button-height--large);
    line-height: var(--button-height--large);
    border-radius: var(--button-border-radius--large); }
  .dnb-button--has-text.dnb-button--size-large {
    padding-left: 2rem;
    padding-right: 2rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-large {
    padding-left: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-large {
    padding-right: 1rem; }
  .dnb-button--has-text {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    width: auto; }
  .dnb-button--has-text .dnb-button__icon {
    margin: 0 0.5rem;
    margin: 0 calc(var(--button-icon-size) / 2); }
  .dnb-button--has-text.dnb-button--icon-position-left {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right {
    padding-right: 0.5rem; }
  .dnb-button--has-text.dnb-button--has-icon .dnb-button__icon {
    order: 2; }
  .dnb-button--has-text.dnb-button--has-icon .dnb-button__text {
    order: 1; }
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left .dnb-button__icon {
    order: 1; }
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left .dnb-button__text {
    order: 2; }
  .dnb-button--reset {
    margin: 0;
    padding: 0;
    width: auto;
    height: auto;
    overflow: visible;
    border: none;
    border-radius: 0;
    background-color: transparent;
    appearance: none;
    box-shadow: none;
    color: inherit;
    font: inherit;
    text-align: inherit;
    line-height: inherit; }
    .no-touch .dnb-button--reset:hover[disabled] {
      cursor: not-allowed; }
    .no-touch .dnb-button--reset:hover:not([disabled]) {
      box-shadow: none;
      border: none; }
    .dnb-button--reset:not([disabled]):focus, .dnb-button--reset:not([disabled]):active {
      outline: none; }
      html[data-whatinput='keyboard'] .dnb-button--reset:not([disabled]):focus, html[data-whatinput='keyboard'] .dnb-button--reset:not([disabled]):active {
        box-shadow: 0 0 0 2px var(--color-emerald-green);
        border-color: transparent; }
    html[data-whatinput='mouse'] .dnb-button--reset:not([disabled]):focus,
    html[data-whatinput='mouse'] .dnb-button--reset:not([disabled]):active {
      box-shadow: none;
      color: inherit;
      border: none; }
  .dnb-button[type='button'] {
    appearance: none; }
  button.dnb-button::-moz-focus-inner .dnb-button {
    border: none; }

a.dnb-button {
  transition: none; }
"
`;
